--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,4 @@
-her-search {
-    text-align: center;
-    margin-bottom: 2rem;
-    animation: fadeIn 1s ease;
-  }
-  
-  .weather-search h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
+hettom: 1rem;
     color: var(--primary-text);
   }
   
