--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,6 @@
 hettom: 1rem;
     color: var(--primary-text);
-  }
-  
-  .search-grp {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+;
   }
   
   form {
